# orange

./: .gitignore  CMakeLists.txt  LICENSE  README.md  StarfishVM.1.0.0.nupkg  starfish.sln
.github/workflows/: main.yml
ConsoleUI/: Program.cs
ConsoleUI/Properties/: AssemblyInfo.cs
Interface/: App.xaml  App.xaml.cs  Interface.csproj  Logger.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  StarfishVM.cs
Interface/App/: App.xaml.cs  AppModel.cs  AppViewModel.cs
Interface/Framework/: DelagateCommand.cs  Globals.cs  ObservableObject.cs  RelayCommand.cs  SubWindow.cs
Interface/Log/: Log.xaml  Log.xaml.cs
Interface/MemoryViewer/: MemoryViewer.xaml  MemoryViewer.xaml.cs  MemoryViewerViewModel.cs
Interface/MicrocodeProcess/: MicrocodeProcess.xaml  MicrocodeProcess.xaml.cs  MicrocodeProcessViewModel.cs
Interface/Properties/: AssemblyInfo.cs
MicrocodeCompiler/: AST.cs  FileStream.cs  MicrocodeCompiler.csproj  Parser.cs  Program.cs  Token.cs  TokenStream.cs  microcode.mcode
MicrocodeCompiler/Properties/: AssemblyInfo.cs
VMLib/: ALU.cs  Bus.cs  Clock.cs  Component.cs  Flags.cs  Graph.cs  ILogger.cs  InstructionRegister.cs  Memory64k.cs  MicrocodeCommand.cs  MicrocodeController.cs  NullLogger.cs  ObservableObject.cs  PhaseCounter.cs  Register.cs  StarfishVM.cs  Util.cs  VMCore.cs  VMLib.csproj
block/: README.md
cli/: CLI.cs  CLI.csproj
hwvm/: README.md
hwvm/ConsoleUI/: ConsoleUI.csproj
hwvm/Interface/: Interface.csproj
hwvm/Interface/App/: App.xaml  App.xaml.cs
hwvm/Interface/Framework/: Globals.cs
hwvm/Interface/Log/: Log.xaml
hwvm/Interface/MicrocodeProcess/: MicrocodeProcess.xaml.cs
hwvm/Interface/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
hwvm/VMLib/: ALU.cs  Bus.cs  Clock.cs  Component.cs  ControlledRegister.cs  MicrocodeCommand.cs  NullLogger.cs  ObservableObject.cs  PhaseCounter.cs  RegisterController.cs  Util.cs  VMCore.cs
hwvm/VMLib/Properties/: AssemblyInfo.cs
microasm/: CMakeLists.txt  README.md  switch.c  test.uasm
microasm/src/: analyse.c  arg.c  ast.c  error.c  main.c  memory.c  parser.c  platform.c  scanner.c  table.c  test.c  token.c
microasm/src/emulator/: bus.c  bus.h  emu.c  emu.h  emulator.c  emulator.h  instructionRegister.c  instructionRegister.h  memory64k.c  memory64k.h  microcode.uasm  register.c  register.h  types.uasm  vmcore.c  vmcore.h
microasm/src/emulator/compiletime/: cWriter.c  cWriter.h  codegen.c  codegen.h  create.c  create.c.save  create.h  createEmulator.c  createEmulator.h  emulatorWriter.c  emulatorWriter.h  main.c  prebuild.c  runCodegen.c  template.c  template.h  vmcoregen.c  vmcoregen.h  writeEmulator.c  writeEmulator.h
microasm/src/emulator/runtime/: busToReg.c  emu.c  emu.h  emulator.c  halt.c  instRegSet.c  instructionRegister.c  instructionRegister.h  memRead.c  memWrite.c  memory64k.c  regToBus.c  register.c  register.h  vmcore.c  vmcore.h
microasm/src/include/: arg.h  ast.h  error.h  memory.h  parser.h  platform.h  scanner.h  table.h  test.h  token.h
microasm/src/microcode/: analyse.c  analyse.h  ast.c  ast.h  codegen.c  codegen.h  error.c  error.h  parser.c  parser.h  prebuild.c  scanner.c  scanner.h  test.c  test.h  token.c  token.h
microasm/src/shared/: arg.c  arg.h  graph.c  graph.h  log.c  log.h  memory.c  memory.h  path.c  path.h  platform.c  platform.h  table.c  table.h
microasm/test/: badnumber.uasmt  badopcodeparens.uasmt  badstatementstart.uasmt  blockstartmissing.uasmt  duplicatesemicolon.uasm  headerwithcondition.uasmt  sample.uasm  test.uasm  test.uasmt  twoheader.uasmt  twoinput.uasmt  twooutput.uasmt  zerosizeinput.uasmt
schematics/: ALU.sch  FlagsRegister.sch  InstructionDecoder.sch  InstructionRegister.sch  OCPU.net  OCPU.sch  PhaseCounter.sch  Registers.sch
src/: main.c
src/emulator/: microcode.uasm  types.uasm
src/emulator/compiletime/: codegen.c  codegen.h  create.c  create.h  runCodegen.c  runCodegen.h  template.c  template.h
src/emulator/runtime/: busToReg.c  emu.h  halt.c  memWrite.c  regToBus.c
src/microcode/: analyse.c  analyse.h  analyseMicrocode.c  analyseMicrocode.h  analysisTypes.c  analysisTypes.h  ast.c  ast.h  error.c  error.h  parser.c  parser.h  scanner.c  scanner.h  test.c  test.h  token.c  token.h
src/shared/: arg.c  arg.h  graph.c  graph.h  log.c  log.h  memory.c  memory.h  path.c  path.h  platform.c  platform.h  table.c  table.h  table2.c  table2.h
test/: badopcodeparens.uasmt  badstatementstart.uasmt  headerwithcondition.uasmt  multilineheader.uasmt  regression#1.uasm  twoinput.uasmt
vm/: Log.cs
